# NSUPython2022

./: README,md  README.md
k.prokofev/problems-1/: task1.py
problems-1/a-tarasov5/: problem1.py  problem2.py  problem2_impl.py  problem3.py  problem3_impl.py  problem5.py  problem5_impl.py  problem5_test.py
problems-1/b-patrushev/: problem1.py  problem2.py  problem3.py  problem4.py  problem5.py
problems-1/ghB111/: problem1.py  problem2.py
problems-1/i-shatalov/: problem1.py  problem2.py  problem3.py  problem4.py  problem5.py
problems-1/k-moskalenko/: problem1.py  problem2.py  problem3.py  problem4.py  problem5.py
problems-1/k-prokofev/: problem1.py  problem2.py  problem3.py  problem4.py  problem5.py
problems-1/r-brek/: problem2.py
problems-1/r-titkov/: problem1.py  problem2.py  problem3.py  problem4.py  problem5.py  problem5_tests.py
problems-2/a-tarasov5/: problem1.py  problem1_test.py  problem2.py  problem2_impl.py  problem3.py  problem4.py  problem4_impl.py  problem4_test.py  problem5.py  problem5_impl.py
problems-2/b-patrushev/: problem1.py  problem2.py  problem3.py  problem4.py  problem5.py
problems-2/ghB111/: problem2.py  (+1 more)
problems-9/: problem1.py  problem1_tests.py
project/k-moskalenko/: .gitignore  CMakeLists.txt  build.sh  install.sh  mandelbrot.cpp  requirements.txt  run.sh  setup-env.sh  setup-ubuntu.sh  setup.py
project/k-moskalenko/src/c++/: CMakeLists.txt  mandelbrot.cpp  palette.h
project/k-moskalenko/src/python/: __init__.py  __main__.py  canvas.py  main.py  mandelbrot.py
projects/r-brek/c++/: CMakeLists.txt  mandelbrot.cpp
(+105 files in other folders)
